# qa_guru_python_16_poetry

./: README.md
poetry_test/: pyproject.toml
